resources/sass/global.scss
/* ... */
@media only screen and (max-width: 768px) {
  .btn-custom {
    font-size: 16px;
  }
}

.btn-custom:focus {
  outline: none;
}

.btn-white {
  background-color: white;
  color: #137BCE;
}

.btn-blue {
  background-color: #137BCE;
  color: white;
}

.btn-white:hover {
  background-color: #137BCE;
  color: white;
  text-decoration: underline;
}

.btn-blue:hover {
  background-color: white;
  color: #137BCE;
  text-decoration: underline;
}

.btn-border {
  border-radius: 50%;
}

.border-2 {
  border-width: 0;
  border-bottom-width: 2px;
  border-style: solid;
}

.btn-group .btn-custom:first-of-type {
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.btn-group .btn-custom:last-child {
  border-top-left-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
}

.btn-alternate-login {
  padding: 6px 24px;
  font-size: 18px;
  outline: unset;
  border: 1px solid #fff;
  border-radius: 1px;
  font-family: RobotoCondensed-Bold;
  width: 100%;
  background-color: #000;
  display: inline-block;
}

.btn-alternate-login:hover {
  text-decoration: underline;
}

.btn-blue-bold {
  @extend .btn-custom, .btn-blue, .font-condensed-bold;
}
/**************************************************
# Label Custom
**************************************************/
.label-custom {
  padding: 8.5px 20px;
  border: none;
  font-size: 20px;
  outline: unset;
  border-radius: 2px;
  border: 1px solid #11375C;
  max-width: 160px;
  width: 100%;
}

.label-blue {
  background-color: #11375C;
  color: white;
}

/**************************************************
# Input
**************************************************/

.form-group-input {
  padding: 12.5px;
  font-size: 20px;
  border-radius: 1px;
}

.form-group-input:focus {
  outline: none;
}

.form-check-label {
  font-size: .9rem;
  color: #11375C;
}

/**************************************************
# Heading
**************************************************/

h1 {
  font-size: 3.75rem;
}

h2 {
  font-size: 3.125rem;
  font-family: RamaGothicESemiBold;
  text-transform: uppercase;
}

h3 {
  font-size: 2.875rem;
}

h4 {
  font-size: 2rem;
}

h5 {
  font-size: 1.5rem;
}

@media only screen and (max-width: 768px) {
  h2 {
    font-size: 2rem;
  }

  h3 {
    font-size: 2rem;
  }

  h5 {
    font-size: 1.5rem;
  }
}


/**************************************************
# Paragraph
**************************************************/
p {
  font-size: 1em;
  margin: 0;
  margin-bottom: 10px;
}

/**************************************************
# Border
**************************************************/

.border-dashed {
  border-style: dashed;
  border-color: #A8A8A8;
}

.h-divider {
  @extend .border-2, .border-dashed, .my-5;
}

/**************************************************
# Banner Menu Section
**************************************************/
.banner-link-box {
  @extend .container-fluid, .bg-black, .d-none, .d-md-flex;
  padding-top: 12.5px;
  padding-bottom: 12.5px;
}

.banner-link-box ul {
  @extend .d-none, .d-md-flex;
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.banner-link-box li.banner-link-item {
  @extend .font-condensed-bold;
}

.banner-link-box li.banner-link-item:not(:first-child) {
  @extend .ml-md-3, .ml-lg-5, .pl-md-3, .pl-lg-5;
}


.banner-link-box .banner-link-item a, .banner-link-item-dropdown, .banner-link-item-dropdown a {
  color: white;
  font-size: 1.25rem;
  margin: 7px 0px;
  text-transform: uppercase;
}

.banner-link-item-dropdown {
  max-width: 300px;
  width: 100%;
  list-style-type: none;
}

.banner-link-box .banner-link-item a:hover, .banner-link-item-dropdown:hover, .banner-link-item-dropdown a:hover {
  color: #79C6FF;
}

.banner-link-item-dropdown.active img {
  transition: all .4s ease-in-out;
}

.banner-link-item-dropdown.active img {
  margin-top: -1px;
  margin-left: 5px;
}

.banner-link-item-dropdown.active:hover img {
  transform: rotate(180deg)
}

.banner-link-box .banner-link-item a.active, .banner-link-item-dropdown.active {
  color: #79C6FF;
}

.banner-link-item-dropdown *:hover {
  text-decoration: underline;
}

.banner-link-box .banner-link-item a.active:hover, .banner-link-item-dropdown.active:hover {
  color: white;
}

@media only screen and (max-width: 12228px) {
  .banner-link-box .banner-link-item a, .banner-link-item-dropdown, .banner-link-item-dropdown a {
    font-size: 1.2rem;
  }
}

@media only screen and (max-width: 576px) {
  .banner-link-box .banner-link-item a, .banner-link-item-dropdown, .banner-link-item-dropdown a {
    font-size: .85rem;
  }

  .banner-link-item-dropdown img {
    width: 12px
  }
}

.non-active {
  display: none;
}

/**************************************************
# Table
**************************************************/
table {
  width: 100%;
  color: #11375C;
}

table tr {
  height: 60px;
}

table td span {
  display: inline-block;
}

main:not(.page-list-manager) table thead th {
  padding: 12px 24px;
  font-size: 20px;
  font-family: RobotoCondensed-Bold;
  line-height: 1.25;
}

main:not(.page-list-manager) table tbody td {
  padding: 12px 24px;
  font-size: 15px;
  font-family: RobotoCondensed;
}


main:not(.page-list-manager) table tbody tr:nth-child(even) {
  background-color: #E8E8E8;
}
/* ... */

